--- a/actors-actresses.html
+++ b/actors-actresses.html
@@ -13,7 +13,7 @@
       body {
         background: #292d34;
         color: #fff;
-        font-family: "PFDinTextPro-Regular", Arial, sans-serif;
+        font-family: "Segoe UI", sans-serif;
         min-height: 100vh;
         margin: 0;
         padding: 0;
@@ -220,7 +220,7 @@
         color: #bfc3c7;
         text-decoration: none;
         font-size: 1.2rem;
-        font-family: "PFDinTextPro-Regular", Arial, sans-serif;
+        font-family: "Segoe UI", sans-serif;
         transition: color 0.3s;
       }
 
@@ -294,7 +294,7 @@
 
       .about-caa-text {
         font-size: 1rem;
-        font-family: "PFDinTextPro-Regular", Arial, sans-serif;
+        font-family: "Segoe UI", sans-serif;
         color: #292d34;
         margin-bottom: 1.2rem;
         line-height: 1.6;
@@ -317,7 +317,7 @@
         background: #b71c2c;
         color: #fff;
         padding: 0 0 32px 0;
-        font-family: "PFDinTextPro-Regular", Arial, sans-serif;
+        font-family: "Segoe UI", sans-serif;
         margin-top: 0;
         border: none;
         max-height: 70vh;
@@ -562,7 +562,7 @@
         width: 320px;
         background: transparent;
         color: #333;
-        font-family: "PFDinTextPro-Regular", Arial, sans-serif;
+        font-family: "Segoe UI", sans-serif;
         position: relative;
       }
 
@@ -699,7 +699,7 @@
         font-size: 0.95em;
         margin-bottom: 10px;
         font-style: italic;
-        font-family: "PFDinTextPro-Regular", Arial, sans-serif;
+        font-family: "Segoe UI", sans-serif;
       }
 
       .person-price {
@@ -946,6 +946,9 @@
             ><br />
           </h1>
           <ul class="navbar-secondary-links">
+            <li>
+              <a href="index.html" class="nav-secondary-link">Home</a>
+            </li>
             <li>
               <a href="about-us.html" class="nav-secondary-link">About</a>
             </li>
