--- a/contact.html
+++ b/contact.html
@@ -136,7 +136,7 @@
         color: #bfc3c7;
         text-decoration: none;
         font-size: 1.2rem;
-        font-family: "PFDinTextPro-Regular", Arial, sans-serif;
+        font-family: "Segoe UI", sans-serif;
         transition: color 0.3s;
       }
       .nav-secondary-link:hover {
@@ -170,7 +170,7 @@
         background: #b71c2c;
         color: #fff;
         padding: 0 0 32px 0;
-        font-family: "PFDinTextPro-Regular", Arial, sans-serif;
+        font-family: "Segoe UI", sans-serif;
         margin-top: 0;
         border: none;
         max-height: 70vh;
@@ -415,7 +415,7 @@
         width: 320px;
         background: transparent;
         color: #333;
-        font-family: "PFDinTextPro-Regular", Arial, sans-serif;
+        font-family: "Segoe UI", sans-serif;
         position: relative;
       }
 
@@ -552,7 +552,7 @@
         font-size: 0.95em;
         margin-bottom: 10px;
         font-style: italic;
-        font-family: "PFDinTextPro-Regular", Arial, sans-serif;
+        font-family: "Segoe UI", sans-serif;
       }
 
       .person-price {
@@ -804,6 +804,9 @@
           </h1>
           <ul class="navbar-secondary-links">
             <li>
+              <a href="index.html" class="nav-secondary-link">Home</a>
+            </li>
+            <li>
               <a href="about-us.html" class="nav-secondary-link">About</a>
             </li>
             <li>
@@ -878,7 +881,7 @@
           max-width: 420px;
           margin: 0 auto 32px auto;
           color: #292d34;
-          font-family: "PFDinTextPro-Regular", Arial, sans-serif;
+          font-family: "Segoe UI", sans-serif;
           position: relative;
           z-index: 3;
           animation: fadeIn 0.5s ease-in-out;
@@ -1009,11 +1012,10 @@
     <footer class="caa-footer">
       <div class="caa-footer-content desktop-footer">
         <div class="footer-main-row">
-          
           <!-- <div class="footer-logo-col">
           </div> -->
           <div class="caa-footer-logo" style="margin-bottom: 1rem">CAA</div>
-          
+
           <div class="footer-links-col">
             <ul class="footer-links-list">
               <li><a href="about-us.html">About Us</a></li>
