--- a/sports-personalities-details.html
+++ b/sports-personalities-details.html
@@ -13,7 +13,7 @@
       body {
         background: #292d34;
         color: #fff;
-        font-family: "PFDinTextPro-Regular", Arial, sans-serif;
+        font-family: "Segoe UI", sans-serif;
         min-height: 100vh;
         margin: 0;
         padding: 0;
@@ -191,7 +191,7 @@
         border: 2px solid #e5e5e5;
         border-radius: 8px;
         font-size: 1rem;
-        font-family: "PFDinTextPro-Regular", Arial, sans-serif;
+        font-family: "Segoe UI", sans-serif;
         transition: border-color 0.3s ease;
       }
 
@@ -284,39 +284,85 @@
         </div>
       </div>
       <style>
-    /* Preloader Styles */ #preloader { position: fixed; top: 0; left: 0; width:
-    100vw; height: 100vh; background: rgba(44,47,52,0.92); z-index: 9999;
-    display: flex; align-items: center; justify-content: center; transition:
-    opacity 0.4s; } .preloader-content { display: flex; flex-direction: column;
-    align-items: center; justify-content: center; } .preloader-logo { font-size:
-    2.8rem; font-family: 'PFDinTextPro-Bold', Arial, sans-serif; color: #fff;
-    margin-bottom: 36px; letter-spacing: -2px; font-weight: bold; }
-    .preloader-circles { display: flex; gap: 18px; } .preloader-circles span {
-    display: block; width: 18px; height: 18px; border-radius: 50%; background:
-    red; opacity: 0.7; animation: preloader-bounce 1.2s infinite
-    cubic-bezier(.4,0,.2,1); } .preloader-circles span:nth-child(2) {
-    animation-delay: 0.2s; } .preloader-circles span:nth-child(3) {
-    animation-delay: 0.4s; } .preloader-circles span:nth-child(4) {
-    animation-delay: 0.6s; } @keyframes preloader-bounce { 0%, 100% { transform:
-    translateY(0); opacity: 0.7; } 50% { transform: translateY(-22px); opacity:
-    1; } }</style>
-    
-  <script>
-    window.addEventListener("DOMContentLoaded", function () {
-      setTimeout(function () {
-        document.getElementById("preloader").style.opacity = 0;
-        setTimeout(function () {
-          document.getElementById("preloader").style.display = "none";
-          document.querySelector(".main-container").style.opacity = 1;
-        }, 400);
-      }, 1200);
-    });
-  </script>
-    </div>  
+        /* Preloader Styles */
+        #preloader {
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100vw;
+          height: 100vh;
+          background: rgba(44, 47, 52, 0.92);
+          z-index: 9999;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          transition: opacity 0.4s;
+        }
+        .preloader-content {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+        }
+        .preloader-logo {
+          font-size: 2.8rem;
+          font-family: "PFDinTextPro-Bold", Arial, sans-serif;
+          color: #fff;
+          margin-bottom: 36px;
+          letter-spacing: -2px;
+          font-weight: bold;
+        }
+        .preloader-circles {
+          display: flex;
+          gap: 18px;
+        }
+        .preloader-circles span {
+          display: block;
+          width: 18px;
+          height: 18px;
+          border-radius: 50%;
+          background: red;
+          opacity: 0.7;
+          animation: preloader-bounce 1.2s infinite cubic-bezier(0.4, 0, 0.2, 1);
+        }
+        .preloader-circles span:nth-child(2) {
+          animation-delay: 0.2s;
+        }
+        .preloader-circles span:nth-child(3) {
+          animation-delay: 0.4s;
+        }
+        .preloader-circles span:nth-child(4) {
+          animation-delay: 0.6s;
+        }
+        @keyframes preloader-bounce {
+          0%,
+          100% {
+            transform: translateY(0);
+            opacity: 0.7;
+          }
+          50% {
+            transform: translateY(-22px);
+            opacity: 1;
+          }
+        }
+      </style>
+
+      <script>
+        window.addEventListener("DOMContentLoaded", function () {
+          setTimeout(function () {
+            document.getElementById("preloader").style.opacity = 0;
+            setTimeout(function () {
+              document.getElementById("preloader").style.display = "none";
+              document.querySelector(".main-container").style.opacity = 1;
+            }, 400);
+          }, 1200);
+        });
+      </script>
+    </div>
     <div class="container">
-        <a href="sports-personalities.html" class="back-button">
-          ← Back to Sports Personalities
-        </a>
+      <a href="sports-personalities.html" class="back-button">
+        ← Back to Sports Personalities
+      </a>
 
       <div class="person-details">
         <div class="person-header">
@@ -326,7 +372,7 @@
             alt="Sports Personality"
             class="person-image"
           />
-          <div class="person-info" style="margin-left: 3rem;">
+          <div class="person-info" style="margin-left: 3rem">
             <h1 id="person-name" class="person-name">Loading...</h1>
             <p id="person-department" class="person-department">
               Sports Professional
@@ -469,103 +515,102 @@
     </div>
 
     <script>
-  async function loadPersonDetails() {
-    const urlParams = new URLSearchParams(window.location.search);
-    const personName = urlParams.get("name");
+      async function loadPersonDetails() {
+        const urlParams = new URLSearchParams(window.location.search);
+        const personName = urlParams.get("name");
 
-    if (!personName) {
-      document.getElementById("person-bio").textContent =
-        "No sports personality specified.";
-      return;
-    }
+        if (!personName) {
+          document.getElementById("person-bio").textContent =
+            "No sports personality specified.";
+          return;
+        }
 
-    document.getElementById("person-name").textContent = personName;
-    document.title = `${personName} - Sports Personality Details - CAA`;
+        document.getElementById("person-name").textContent = personName;
+        document.title = `${personName} - Sports Personality Details - CAA`;
 
-    try {
-      // Fetch from TheSportsDB API
-      const response = await fetch(
-        `https://www.thesportsdb.com/api/v1/json/123/searchplayers.php?p=${encodeURIComponent(
-          personName
-        )}`
-      );
+        try {
+          // Fetch from TheSportsDB API
+          const response = await fetch(
+            `https://www.thesportsdb.com/api/v1/json/123/searchplayers.php?p=${encodeURIComponent(
+              personName
+            )}`
+          );
 
-      if (!response.ok) throw new Error("Failed to fetch player data");
+          if (!response.ok) throw new Error("Failed to fetch player data");
 
-      const data = await response.json();
+          const data = await response.json();
 
-      if (!data.player || data.player.length === 0) {
-        document.getElementById("person-bio").textContent =
-          "No details found for this sports personality.";
-        return;
-      }
+          if (!data.player || data.player.length === 0) {
+            document.getElementById("person-bio").textContent =
+              "No details found for this sports personality.";
+            return;
+          }
 
-      const player = data.player[0];
+          const player = data.player[0];
 
-      // Populate details
-      document.getElementById("person-department").textContent =
-        player.strSport || "Sports Professional";
+          // Populate details
+          document.getElementById("person-department").textContent =
+            player.strSport || "Sports Professional";
 
-      // Player image (fallback if none)
-      const imageElement = document.getElementById("person-image");
-      imageElement.src =
-        player.strThumb ||
-        player.strCutout ||
-        `https://via.placeholder.com/300x400/b71c2c/ffffff?text=${encodeURIComponent(
-          personName
-        )}`;
-      imageElement.alt = personName;
+          // Player image (fallback if none)
+          const imageElement = document.getElementById("person-image");
+          imageElement.src =
+            player.strThumb ||
+            player.strCutout ||
+            `https://via.placeholder.com/300x400/b71c2c/ffffff?text=${encodeURIComponent(
+              personName
+            )}`;
+          imageElement.alt = personName;
 
-      // Player bio
-      document.getElementById("person-bio").innerHTML = `
+          // Player bio
+          document.getElementById("person-bio").innerHTML = `
         <strong>Sport:</strong> ${player.strSport || "N/A"}<br>
         <strong>Team:</strong> ${player.strTeam || "N/A"}<br>
         <strong>Position:</strong> ${player.strPosition || "N/A"}<br>
         <strong>Born:</strong> ${player.dateBorn || "N/A"} in ${
-        player.strBirthLocation || "N/A"
-      }<br>
+            player.strBirthLocation || "N/A"
+          }<br>
       `;
 
-      // Hide career highlights (not available in API)
-      document.getElementById("known-for").style.display = "none";
+          // Hide career highlights (not available in API)
+          document.getElementById("known-for").style.display = "none";
 
-      // Fill booking form with player name
-      document.getElementById("person-name-field").value = personName;
-    } catch (error) {
-      console.error("Error loading sports personality details:", error);
-      document.getElementById("person-bio").textContent =
-        "Error loading sports personality details. Please try again later.";
-    }
-  }
+          // Fill booking form with player name
+          document.getElementById("person-name-field").value = personName;
+        } catch (error) {
+          console.error("Error loading sports personality details:", error);
+          document.getElementById("person-bio").textContent =
+            "Error loading sports personality details. Please try again later.";
+        }
+      }
 
-  function handleFormSubmission(event) {
-    event.preventDefault();
+      function handleFormSubmission(event) {
+        event.preventDefault();
 
-    const formData = new FormData(event.target);
-    const bookingData = Object.fromEntries(formData.entries());
+        const formData = new FormData(event.target);
+        const bookingData = Object.fromEntries(formData.entries());
 
-    console.log("Booking request submitted:", bookingData);
+        console.log("Booking request submitted:", bookingData);
 
-    alert(
-      "Thank you for your booking request! We will respond within 4 hours during normal business hours."
-    );
+        alert(
+          "Thank you for your booking request! We will respond within 4 hours during normal business hours."
+        );
 
-    event.target.reset();
+        event.target.reset();
 
-    const urlParams = new URLSearchParams(window.location.search);
-    const personName = urlParams.get("name");
-    if (personName) {
-      document.getElementById("person-name-field").value = personName;
-    }
-  }
+        const urlParams = new URLSearchParams(window.location.search);
+        const personName = urlParams.get("name");
+        if (personName) {
+          document.getElementById("person-name-field").value = personName;
+        }
+      }
 
-  document.addEventListener("DOMContentLoaded", () => {
-    loadPersonDetails();
-    document
-      .getElementById("booking-form")
-      .addEventListener("submit", handleFormSubmission);
-  });
-</script>
-
+      document.addEventListener("DOMContentLoaded", () => {
+        loadPersonDetails();
+        document
+          .getElementById("booking-form")
+          .addEventListener("submit", handleFormSubmission);
+      });
+    </script>
   </body>
 </html>
