--- a/index.html
+++ b/index.html
@@ -1124,7 +1124,7 @@
           </p>
 
           <a
-            href="index-2.html"
+            href="popular people.html"
             style="
               display: inline-block;
               padding: 12px 25px;
@@ -1199,7 +1199,7 @@
               we connect you with the perfect artist for your audience.
             </p>
             <a
-              href="index-2.html"
+              href="musician-singers.html"
               style="
                 display: inline-block;
                 margin-top: 10px;
@@ -1251,7 +1251,7 @@
               happen with seamless bookings.
             </p>
             <a
-              href="index-2.html"
+              href="actors-actresses.html"
               style="
                 display: inline-block;
                 margin-top: 10px;
@@ -1302,7 +1302,7 @@
               occasion.
             </p>
             <a
-              href="index-2.html"
+              href="sports-personalities.html"
               style="
                 display: inline-block;
                 margin-top: 10px;
@@ -1353,7 +1353,7 @@
               talking about.
             </p>
             <a
-              href="index-2.html"
+              href="popular people.html"
               style="
                 display: inline-block;
                 margin-top: 10px;
@@ -1454,32 +1454,32 @@
           <div class="caa-footer-logo" style="margin-bottom: 1rem">CAA</div>
           <div class="footer-links-col">
             <ul class="footer-links-list">
-              <li><a href="index-2.html">About Us</a></li>
+              <li><a href="about-us.html">About Us</a></li>
               <li><a href="contact.html">Contact Us</a></li>
               <li><a href="career.html">Careers</a></li>
             </ul>
           </div>
           <div class="footer-links-col">
             <ul class="footer-links-list">
-              <li><a href="index-2.html">Social Responsibility</a></li>
-              <li><a href="index-2.html">Foundation</a></li>
-              <li><a href="index-2.html">Contact Us</a></li>
+              <!-- <li><a href="index.html">Social Responsibility</a></li>
+              <li><a href="index.html">Foundation</a></li> -->
+              <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
         </div>
         <hr class="caa-footer-divider" />
         <div class="footer-bottom-row">
           <div class="footer-bottom-links">
-            <a href="index-2.html">Privacy Policy</a>
+            <a href="index.html">Privacy Policy</a>
             <span class="footer-divider">|</span>
-            <a href="index-2.html">Terms of Use</a>
+            <a href="index.html">Terms of Use</a>
             <span class="footer-divider">|</span>
-            <a href="index-2.html">Accessibility</a>
+            <a href="index.html">Accessibility</a>
           </div>
           <div class="footer-bottom-social">
             <span class="caa-footer-follow-label">Follow us:</span>
             <a
-              href="index-2.html"
+              href="index.html"
               class="caa-footer-instagram"
               aria-label="Instagram"
             >
